<resources>
    <string name="app_name">Revizori</string>
    <string name="login_edit_username">Username</string>
    <string name="login_edit_password">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_button_action_login">Login</string>
    <string name="register_button_action_register">Register</string>
    <string name="register_edit_email">Email</string>
    <string name="register_edit_password">Password</string>
    <string name="register_edit_username">Username</string>
    <string name="register_button_action_login">Již mám účet</string>
    <string name="login_login_error">Vyskytla se chyba. Opakujte prosím přihlášení.</string>
    <string name="register_text_view_title">REGISTRACE</string>
    <string name="login_text_view_title">Přihlášení</string>
    <string name="drawer_menu_item_setting">Nastavení</string>
    <string name="drawer_menu_item_map">Zobraz mapuuu</string>
    <string name="drawer_menu_item_rank">Žebříček</string>
    <string name="drawer_menu_item_log_out">Odhlásit</string>
    <string name="snacbar_back_button_message">Opravdu chcete ukončit aplikaci.</string>
    <string name="login_have_account">Již mám ůčet</string>
    <string name="choose_metro_fragment">Vyberte, prosím, stanici metra:</string>
    <string name="full_map_requesting_enabling_GPS_start">Prosím zapněte GPS, jinak nebude umožněna plnná funkčnost aplikace.</string>
    <string name="full_map_requesting_enabling_GPS_report">Prosím zapněte GPS, jinak nebude umožněno nahlášení revizora.</string>
    <string name="full_map_problem_with_position">Bohužel nebylo možné zaznamenat Vaši polohu.
        Opakujte akci prosím pozdějí. Omlouváme se a děkujeme. </string>
    <string name="summary_button_back_to_map">Uložit a zpátky na mapu</string>
    <string name="summary_thanks_and_request"><![CDATA[<b>Děkujeme</b> za Váše hlášení. Ceníme si toho.<br/> Dále bychom Vás chtěli požádat o poskytnutí <b>krátkého komentáře</b> o Vašem hlášení.]]></string>
    <string name="summerry_hint_comment_text_edit">Jak revizor vypadal? Číslo linky i další okolnosti jsou vítané …</string>
    <string name="login_login_to_network_settings">Nejste online prosim pripojte se.</string>
    <string name="choose_tranport_title">Kde jste videli revizora?</string>
    <string name="full_map_time_request_error">Nemuzete hlasit revizory takto rychle za sebou</string>
    <string name="full_map_location_request_error">Problém s Vaší polohou. Opakujte prosím hlášení později.</string>
</resources>
